# PrimateProvisionsRand

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: embedded_allocator.hpp  motor_controller.hpp  random_motor_controller.hpp
src/: motor_controller.cpp  random_motor_controller.cpp
